Replaced the sun.misc.BASE64* usage by the java.util.Base64 class